--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="cowNormals.js"></script>
     <script src="pointLightCube.js"></script>
     <script src="spotLightCone.js"></script>
-    <script src="assignment_2.js" type="module"></script>
+    <script src="main.js" type="module"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 
